2004-04-29  Ralf Westram  <Coder@ReallySoft.de>

	* doc/manual.html: - removed umlauts

2003-09-19  Ralf Westram  <Coder@ReallySoft.de>

	* src/util.c: - const fix

Version  date		what has been changed

5.0       26.08.2000    - changes to manual, Makefile.in
                        - cpREV hidden by -DCPREV flag
                        - chi2test, quartio included into source code files
                        - generic scr/Makefile.generic
                        - src/makefile.com for VAX
			- AUTHORS, README, ChangeLog updated
			- INSTALL checked
          27.08.2000	- test code excluded
			- '-randseed#' added for debugging purposes
			- ./data added to autoconf/automake
			- warning output if cmdline parameter unknown
          11.10.2000	- fixed output of rate categories of sites before 
			  computing them
			- check whether rate categories were computed by
			  1st user tree or NJ tree fixed in the output
          12.10.2000	- invariant site model normalization fixed


CODE FREEZE
===========

5.0.a33   15.08.2000    - changes for autoconf/automake

5.0.a32   01.08.2000	- a FPE error fixed (badq == 0)
			- small error in -bestq fixed
			- fflush's added at several places

5.0.a31   01.08.2000	- comments added to tree structure sorting puzzle2.c
			- changes in configure.in, Makefile.in

5.0.a30   23.07.2000	- some debugging in checkquart
			- changed to autoconf

5.0.a29   13.07.2000	- some debugging in checkquart

5.0.a28   13.07.2000	- use best quartet topology option (-bestq) implemented

5.0.a27   13.07.2000	- further developement to checkquart 
			- ascii/binary quartet values (-wqla/-wqlb)
			- typo correction

5.0.a26   11.07.2000	- fflush at all checktimer 
			- further developement at checkquart
			- possibility to write quartet values to file (-wqlh)

5.0.a25   06.07.2000	- fflush at checktimer 

5.0.a24   02.07.2000	- further debugging of checkquart 

5.0.a23   02.07.2000	- further developement to checkquart 
